--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,7 +20,6 @@ section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
   font: inherit;
   vertical-align: baseline;}
 
@@ -171,12 +170,19 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
   color: #ffffff;
-  font-weight: 300;
-  line-height: 1em;
   margin: 0 0 1em 0;
 }
-
+h1{
+  font-size: 2.5em;
+  font-weight: bold;
+}
+h2{
+  font-size: 1.5em;
+  letter-spacing: 2em;
+  font-weight: bold;
+}
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+  font-size: 3em;
   color: inherit;
   border: 0;
 }
@@ -184,7 +190,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 h2 {
   font-size: 2em;
   line-height: 1.5em;
-  letter-spacing: -0.025em;
+  letter-spacing: 0.13em;
 }
 
 h3 {
@@ -2686,7 +2692,6 @@ body.is-touch #banner {
   background-color: rgba(23,24,32,.95);
 }
 .hj_projectDescBox_description{
-  height: 55vh;
   overflow: hidden;
 }
 .hj_projectDescBox.right{
@@ -2739,5 +2744,5 @@ body.is-touch #banner {
 
 
 #logo {
-  margin-top: 15px
+  margin-top: 10px
 }
