--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,6 +27,10 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;}
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   line-height: 1;
 }
