--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,6 +33,7 @@ html {
 
 body {
   line-height: 1;
+  overflow-x: hidden;
 }
 
 ol, ul {
@@ -123,17 +124,18 @@ body, input, select, textarea {
   /*padding: 1vh;*/
   /*margin: 0 3vh;*/
 margin: 10px;
-  background-color: #35495e;
+  /*background-color: #35495e;*/
   border-radius: 10px;
   color: white;
+  cursor: pointer;
 }
 
 
 .hjtabsTitle:hover{
-  background-color: #e44c65;
+  color: #e44c65 !important ;
 }
 .hjtabsTitle.selected{
-  background-color: #e44c65;
+  color: #e44c65;
 }
 
 
@@ -155,7 +157,7 @@ a:hover {
   text-decoration: none;
 }
 a.hjtabsTitle:hover{
-  color: #ffffff !important;
+  color: #ffffff ;
   border-bottom-color: transparent;
   text-decoration: none;
 }
